# revops_lead_engine

./: .gitignore  README copy.md  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
config/: icp_config.yaml
data/: lead_engine.db
docs/: Real_Data_Integration_Guide.md  architecture.md  data_dictionary.md
src/: pipeline.py
src/api/: main.py
src/config/: icp_loader.py  settings.py
src/crm/: crm_sync.py
src/dashboard/: app.py  i18n.py  sim_metrics.py
src/database/: database.py  seed_data.py
src/discovery/: discovery.py
src/enrichment/: agentic_flow.md  enrichment.py
src/models/: models.py
src/outreach/: outreach.py
src/scoring/: deal_brief.py  scoring.py
tests/: test_icp_loader.py  test_pipeline.py  test_scoring.py
