[project]
name = "b2b-lead-engine"
version = "0.1.0"
description = "B2B Autonomous Lead Engine & Automated SDR Pipeline"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"
